<resources>
    <string name="app_name">ConverterLab</string>
    <string name="notification_line">UpdatingData</string>
    <string name="phone_info">Тел.:\u0020</string>
    <string name="adress_info">Адрес:\u0020</string>
    <string name="full_phone_info">Контактный телефон:\u0020</string>
    <string name="additional_info">Дополнительная информация:\u0020</string>
    <string name="ask_bid_title">Покупка /\nПродажа</string>
    <string name="currency_name">Название валюты</string>
    <string name="fab_link_title">Сайт</string>
    <string name="fab_phone_title">Позвонить</string>
    <string name="fab_map_title">Карта</string>
    <string name="share">Share</string>
    <string name="search">Search</string>

    <string name="confirm">Подтвердит</string>
    <string name="cancel">Отмена</string>
    <string name="settings">Настройки</string>
    <string name="msg.denied"><![CDATA[Если вы отклоните разрешение, то вы не сможете пользоваться сервисом  Пожалуйста, включите разрешение в [Настройки] > [Разрешения]]]></string>
    <string name="rationale.msg.map">Для доступа к карте, приложению необходимо получить разрешение использования данных о местоположении устройства</string>
</resources>
