<?xml version="1.0" encoding="utf-8"?>
<layout>
    <com.github.clans.fab.FloatingActionMenu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:menu_backgroundColor="@color/menu_on"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorAccent"
        app:menu_labels_colorNormal="@android:color/white"
        app:menu_labels_colorPressed="@android:color/white"
        app:menu_labels_colorRipple="#66FFFFFF"
        app:menu_labels_showShadow="true"
        app:menu_labels_textColor="@color/primary_text">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_map"
            style="@style/fab_btn"
            android:src="@mipmap/ic_map"
            app:fab_label="@string/fab_map_title" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_link"
            style="@style/fab_btn"
            android:src="@mipmap/ic_link"
            app:fab_label="@string/fab_link_title" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_phone"
            style="@style/fab_btn"
            android:src="@mipmap/ic_phone"
            app:fab_label="@string/fab_phone_title" />

    </com.github.clans.fab.FloatingActionMenu>
</layout>